fixed: render menu z-index bug

--- a/src/Scss/components/_menu.scss
+++ b/src/Scss/components/_menu.scss
@@ -52,6 +52,7 @@
     .sidenav{
         .content{
             position: initial;
+            height: initial;
         }
         &--shadow{
             display: none;
